# TiRe

./: .clang-format  CMakeLists.txt  README.md  application.py  commandline.py  conanfile.py  main.py
.github/workflows/: cmake-multi-platform.yml
example-timesheets/: example-1.ts
src/: CMakeLists.txt  addremoveintervalcommand.cpp  application.cpp  application.h  colorutil.cpp  colorutil.h  command.cpp  datetimeeditor.cpp  datetimeeditor.h  datetimeeditor.ui  datetimeselector.cpp  datetimeselector.h  days.h  enum.h  enumcombobox.h  exceptions.h  fmt.h  ganttview.cpp  ganttview.h  interval.cpp  interval.h  intervalmodel.cpp  intervalmodel.h  json.cpp  json.h  leadingzerosspinbox.cpp  leadingzerosspinbox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  period.cpp  period.h  periodedit.cpp  periodedit.h  periodedit.ui  periodsummary.cpp  periodsummary.h  (+37 more)
src/commands/: CMakeLists.txt  addremovecommand.h  addremoveintervalcommand.cpp  addremoveintervalcommand.h  command.h  commands.cpp  commands.h  modifycommand.h  undostack.cpp  undostack.h
src/kdsingleapplication/: CMakeLists.txt
src/views/: CMakeLists.txt  abstractperiodproxymodel.cpp  abstractperiodproxymodel.h  abstractperiodview.cpp  abstractperiodview.h  callbackdelegate.cpp  callbackdelegate.h  delegates.h  detailperiodproxymodel.cpp  detailperiodproxymodel.h  perioddetailproxymodel.cpp  perioddetailproxymodel.h  perioddetailview.cpp  perioddetailview.h  perioddetailview.ui  periodsummary.cpp  periodsummary.h  periodsummary.ui  periodsummarymodel.cpp  periodsummarymodel.h  periodsummaryview.cpp  periodsummaryview.h  planview.cpp  planview.h  planview.ui
test/unit/: CMakeLists.txt  colortest.cpp  periodtest.cpp  plantest.cpp
